--- a/staffmeals.html
+++ b/staffmeals.html
@@ -372,20 +372,18 @@
           <select id="employeeSelect" required>
             <option value="" disabled selected>Select employee</option>
             <option value="Savannah">Savannah</option>
+            <option value="Torch">Torch</option>
             <option value="Slade">Slade</option>
             <option value="Jack">Jack</option>
             <option value="Rico">Rico</option>
             <option value="Jesus">Jesus</option>
-            <option value="Torch">Torch</option>
             <option value="Bart">Bart</option>
             <option value="Audrey">Audrey</option>
-            <option value="Rufus">Rufus</option>
-            <option value="Andy">Andy</option>
             <option value="Bezzy">Bezzy</option>
-            <option value="Marko">Marko</option>
             <option value="Jaxon">Jaxon</option>
             <option value="Wyatt">Wyatt</option>
             <option value="Justin">Justin</option>
+            <option value="Evan">Evan</option>
           </select>
         </div>
 
