--- a/inventory.html
+++ b/inventory.html
@@ -511,15 +511,6 @@
           sugar: 1,
           flour: 1,
         },
-        "Big Buns Deal": {
-          burger_buns: 10,
-          chicken: 10,
-          bacon: 10,
-          potato: 10,
-          corn_syrup: 15,
-          sugar: 1,
-          flour: 1,
-        },
         "The Heartstopper Meal": {
           burger_buns: 5,
           ground_beef: 15,
@@ -533,6 +524,7 @@
 
       const itemRecipes = {
         "The Bleeder": { burger_buns: 1, ground_beef: 1, cheese_slices: 1 },
+        "The Glorious": { burger_buns: 1, ground_beef: 1, cheese_slices: 1 },
         "Double Shot": { burger_buns: 1, ground_beef: 1, lettuce: 1 },
         "Heart Stopper": { burger_buns: 1, ground_beef: 3, cheese_slices: 1 },
         "The Prickley": { burger_buns: 1, chicken: 1, lettuce: 1 },
@@ -545,6 +537,7 @@
         Coffee: { coffee_beans: 1 },
         Fries: { potato: 2 },
         "Onion Rings": { onion: 2 },
+        "Chicken Nuggets": { chicken: 2 },
         "Ice Cream": { ice_cream: 1, vanilla: 2 },
         "Rim Job": { sugar: 1, flour: 1 },
         "Cream Pie": { sugar: 1, flour: 1 },
