--- a/register.html
+++ b/register.html
@@ -821,14 +821,11 @@
     <option value="Slade">Slade</option>
     <option value="Jack">Jack</option>
     <option value="Rico">Rico</option>
-    <option value="Jesus">Jesus</option>
     <option value="Bart">Bart</option>
-    <option value="Audrey">Audrey</option>
     <option value="Bezzy">Bezzy</option>
     <option value="Jaxon">Jaxon</option>
-    <option value="Wyatt">Wyatt</option>
-    <option value="Justin">Justin</option>
     <option value="Evan">Evan</option>
+    <option value="James">James</option>
   </select>
   <!-- styled fake select -->
   <div class="custom-select">
@@ -839,14 +836,11 @@
       <div data-value="Slade">Slade</div>
       <div data-value="Jack">Jack</div>
       <div data-value="Rico">Rico</div>
-      <div data-value="Jesus">Jesus</div>
       <div data-value="Bart">Bart</div>
-    <div data-value="Audrey">Audrey</div>
     <div data-value="Bezzy">Bezzy</div>
     <div data-value="Jaxon">Jaxon</div>
-    <div data-value="Wyatt">Wyatt</div>
-    <div data-value="Justin">Justin</div>
     <div data-value="Evan">Evan</div>
+    <div data-value="James">James</div>
     </div>
   </div>
 </div>
