--- a/staffmeals.html
+++ b/staffmeals.html
@@ -376,14 +376,11 @@
             <option value="Slade">Slade</option>
             <option value="Jack">Jack</option>
             <option value="Rico">Rico</option>
-            <option value="Jesus">Jesus</option>
             <option value="Bart">Bart</option>
-            <option value="Audrey">Audrey</option>
             <option value="Bezzy">Bezzy</option>
             <option value="Jaxon">Jaxon</option>
-            <option value="Wyatt">Wyatt</option>
-            <option value="Justin">Justin</option>
             <option value="Evan">Evan</option>
+            <option value="James">James</option>
           </select>
         </div>
 
